# SUDS

./: .cvsignore  INSTALL  Imakefile  Makefile.am  Makefile.cpp  Makefile.in  Makefile.ini  README.md  README.suds  analyze.c  cape.c  class.c  class.description  color.c  color.h  configure  configure.in  contour.c  convert.c  drexel.c  edit.c  eformat.c  fgge.c  fields.c  fields.h  flags.c  flags.h  fld_derive.c  foote.c  gale.c  globals.h  hodograph.c  init_globals.c  interpolate.c  jaws.c  keywords.h  make-lf  mist.c  mkinstalldirs  ncar.c  (+23 more)
doc/: .cvsignore  Makefile.am  Makefile.in  configure  configure.in  mkinstalldirs  suds.sty  suds.tex  sudsfonts.tex  sudsindex.tex  sudsndx.dats  sudstitle.sty
help/: Makefile.am  Makefile.in  analyze  color  configure  configure.in  create  cut  erase  examine  exit  extend  file  foote  forget  hodograph  interpolate  limits  mark  newvalue  origin  output  select  show  skewt  suds  threshold  windstep  write  wscale  xsect  xyplot
