AUTOMAKE_OPTIONS = foreign

helplibdir = ${libdir}/suds/help
helplib_DATA = \
	analyze color create cut erase examine exit extend file foote \
	forget hodograph interpolate limits mark newvalue origin output \
	select show skewt suds threshold windstep write wscale xsect xyplot

EXTRA_DIST = ${helplib_DATA}
